--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ img {
   width: 100vw;
   height: 2rem;
   padding: 1rem;
+  z-index: 999;
 }
 
 #navbar-content {
@@ -32,11 +33,32 @@ img {
 #navbar-sections {
   display: flex;
   gap: 1.5rem;
+  align-items: center;
 }
 
 #navbar-container a {
   text-decoration: none;
   color: black;
+}
+
+#navbar-contact-button {
+  padding: 0.25rem;
+  width: 8vw;
+  border-radius: 5rem;
+  text-decoration: none;
+  cursor: pointer;
+  border: none;
+  font-size: 1rem;
+  background-color: black;
+  transition: ease-in-out 0.5s;
+}
+
+#navbar-contact-button a {
+  color: white;
+}
+
+#navbar-contact-button:hover {
+  transform: scale(1.1);
 }
 
 #hero-container {
@@ -45,8 +67,8 @@ img {
   width: 100vw;
   padding-left: 8rem;
   padding-right: 8rem;
-  margin-bottom: 0.25rem;
   margin-top: 2rem;
+  align-items: center;
 }
 
 #avatar {
@@ -91,11 +113,58 @@ img {
   transform: scale(1.1);
 }
 
+#comics-container,
+#artwork-container {
+  padding-right: 3rem;
+  padding-left: 3rem;
+  padding-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#comics-container {
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
+#comics-subcontainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.comic-container {
+  display: grid;
+  grid-template-rows: 2fr 1fr;
+}
+
+.comic-container img {
+  width: auto;
+  max-height: 80vh;
+}
+
+.comic-text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.comic-text-container h2 {
+  text-align: center;
+}
+
+.comic-text-container a {
+  text-decoration: none;
+  color: black;
+}
+
 #gallery-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 0.5rem;
-  padding: 3rem;
 }
 
 .gallery-column {
@@ -106,12 +175,12 @@ img {
 
 #contact-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: space-around;
+  grid-template-columns: 2fr 1fr;
+  justify-content: space-between;
   gap: 5rem;
   padding-left: 8rem;
   padding-right: 8rem;
-  padding-top: 5rem;
+  padding-top: 3rem;
 }
 
 #contact-container form {
@@ -168,4 +237,32 @@ img {
 .social-media-link:hover {
   transform: scale(1.1);
   font-size: 1.05rem;
+}
+
+@media only screen and (max-width: 800px) {
+  #navbar-container {
+    /* TODO: Navbar becomes hamburger menu instead */
+    display: none;
+  }
+
+  #hero-container,
+  #gallery-container,
+  #comics-container,
+  #comics-subcontainer,
+  .comic-container,
+  #contact-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    text-align: center;
+  }
+
+  img,
+  #avatar {
+    max-width: 100vw;
+    align-self: center;
+  }
 }
