--- a/styles.css
+++ b/styles.css
@@ -262,8 +262,91 @@ img {
 
 @media only screen and (max-width: 800px) {
   #navbar-container {
-    /* TODO: Navbar becomes hamburger menu instead */
-    display: none;
+    display: flex;
+    justify-content: space-between;
+    z-index: 999;
+    width: 100%;
+    padding: 0;
+    height: 80px;
+    max-width: 100vw;
+  }
+
+  #navbar-sections {
+    display: grid;
+    grid-template-columns: auto;
+    margin: 0;
+    width: 100%;
+    position: absolute;
+    top: -1000px;
+    opacity: 1;
+    transition: all 0.5 ease;
+    z-index: -1;
+  }
+
+  #navbar-sections.active {
+    background: #fff;
+    top: 100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 99;
+    max-height: 80vh;
+    font-size: 1.3rem;
+    padding: 0;
+    margin: 0;
+    left: 0;
+    grid-template-columns: 1fr;
+    align-items: center;
+    gap: 0.1rem;
+  }
+
+  #navbar-sections a,
+  #navbar-sections p {
+    padding: 0;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    width: 100vw;
+    text-align: center;
+    display: grid;
+    margin: 0;
+  }
+
+  #navbar-sections button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 98vw;
+    height: 80px;
+    border-radius: 4px;
+    font-size: 1.3rem;
+  }
+
+  #mobile-menu {
+    position: absolute;
+    top: 20%;
+    right: 5%;
+    transform: translate(5%, 20%);
+  }
+
+  #mobile-menu.is-active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  #mobile-menu.is-active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  #mobile-menu.is-active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+
+  .navbar-toggle .bar {
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    transition: all 0.3s ease-in-out;
+    background: #131313;
+    display: block;
+    cursor: pointer;
   }
 
   #hero-container,
@@ -281,9 +364,20 @@ img {
     text-align: center;
   }
 
+  #hero-container,
+  #comics-container,
+  #contact-container {
+    padding-top: 4rem;
+  }
+
   img,
   #avatar {
     max-width: 100vw;
     align-self: center;
+  }
+
+  #artwork-container .gallery-column iframe {
+    min-height: 60vh;
+    max-height: 80vh;
   }
 }
