--- a/styles.css
+++ b/styles.css
@@ -359,9 +359,13 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 0;
     text-align: center;
+    margin: 0;
+  }
+
+  #hero-contact-button {
+    margin: 0;
   }
 
   #hero-container,
